--- a/public/230526/card/04.html
+++ b/public/230526/card/04.html
@@ -17,7 +17,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_4.이슈페이퍼 (1).png"
+            src="../src/sub/KSPO_161_4. (1).png"
             alt="1번"
             style="display: block"
             width="750"
@@ -27,7 +27,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_4.이슈페이퍼 (2).png"
+            src="../src/sub/KSPO_161_4. (2).png"
             alt="2번"
             style="display: block"
             width="750"
@@ -37,7 +37,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_4.이슈페이퍼 (3).png"
+            src="../src/sub/KSPO_161_4. (3).png"
             alt="3번"
             style="display: block"
             width="750"
@@ -47,7 +47,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_4.이슈페이퍼 (4).png"
+            src="../src/sub/KSPO_161_4. (4).png"
             alt="4번"
             style="display: block"
             width="750"
@@ -57,7 +57,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_4.이슈페이퍼 (5).png"
+            src="../src/sub/KSPO_161_4. (5).png"
             alt="5번"
             style="display: block"
             width="750"
@@ -67,7 +67,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_4.이슈페이퍼 (6).png"
+            src="../src/sub/KSPO_161_4. (6).png"
             alt="6번"
             style="display: block"
             width="750"
@@ -77,7 +77,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_4.이슈페이퍼 (7).png"
+            src="../src/sub/KSPO_161_4. (7).png"
             alt="7번"
             style="display: block"
             width="750"
@@ -87,7 +87,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_4.이슈페이퍼 (8).png"
+            src="../src/sub/KSPO_161_4. (8).png"
             alt="8번"
             style="display: block"
             width="750"
@@ -97,7 +97,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_4.이슈페이퍼 (9).png"
+            src="../src/sub/KSPO_161_4. (9).png"
             alt="9번"
             style="display: block"
             width="750"
@@ -107,7 +107,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_4.이슈페이퍼 (10).png"
+            src="../src/sub/KSPO_161_4. (10).png"
             alt="10번"
             style="display: block"
             width="750"
