--- a/public/230526/card/07.html
+++ b/public/230526/card/07.html
@@ -17,7 +17,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_7.스낵스포츠 (1).png"
+            src="../src/sub/KSPO_161_7. (1).png"
             alt="1번"
             style="display: block"
             width="750"
@@ -27,7 +27,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_7.스낵스포츠 (2).png"
+            src="../src/sub/KSPO_161_7. (2).png"
             alt="2번"
             style="display: block"
             width="750"
@@ -37,7 +37,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_7.스낵스포츠 (3).png"
+            src="../src/sub/KSPO_161_7. (3).png"
             alt="3번"
             style="display: block"
             width="750"
@@ -48,7 +48,7 @@
         <td>
           <a href="http://www.fishing-korea.com/" target="_blank">
             <img
-              src="../src/sub/KSPO_161_7.스낵스포츠 (4).png"
+              src="../src/sub/KSPO_161_7. (4).png"
               alt="4번"
               style="display: block"
               width="750"
@@ -59,7 +59,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_7.스낵스포츠 (5).png"
+            src="../src/sub/KSPO_161_7. (5).png"
             alt="5번"
             style="display: block"
             width="750"
@@ -69,7 +69,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_7.스낵스포츠 (6).png"
+            src="../src/sub/KSPO_161_7. (6).png"
             alt="6번"
             style="display: block"
             width="750"
