--- a/public/230526/main.html
+++ b/public/230526/main.html
@@ -17,7 +17,7 @@
       <tr>
         <td>
           <img
-            src="src/main/KSPO_161_0.뉴스레터_(2)내용.png"
+            src="src/main/KSPO_161_0._(2).png"
             usemap="#map"
             alt="뉴스레터"
             style="display: block"
