--- a/public/230526/card/01.html
+++ b/public/230526/card/01.html
@@ -10,7 +10,7 @@
         paliing: 0;
         display: block;
         max-width: 750px;
-        font-family: "맑은고딕", sans-serif;
+        font-family: '맑은고딕', sans-serif;
         letter-spacing: -1px;
         word-break: keep-all;
         text-align: left;
@@ -86,7 +86,7 @@
         line-height: 25px;
       }
       .spobiz_css ul li dl dd:before {
-        content: "";
+        content: '';
         position: absolute;
         top: 10px;
         left: -7px;
@@ -99,7 +99,7 @@
       }
 
       .spo_txt dd:before {
-        content: "";
+        content: '';
         position: absolute;
         top: 10px;
         left: -7px;
@@ -126,7 +126,7 @@
         padding-left: 10px;
       }
       .h_txt:before {
-        content: "○";
+        content: '○';
         display: block;
         position: absolute;
         top: -1px;
@@ -144,7 +144,7 @@
         display: block;
       }
       .txt_01:before {
-        content: "-";
+        content: '-';
         display: block;
         position: absolute;
         top: -1px;
@@ -156,7 +156,7 @@
         margin-left: 10px;
       }
       .txt_02:before {
-        content: "※";
+        content: '※';
         display: block;
         position: absolute;
         top: -1px;
@@ -167,7 +167,7 @@
         display: block;
       }
       .txt_03:before {
-        content: "▶";
+        content: '▶';
         display: block;
         position: absolute;
         top: -1px;
@@ -183,7 +183,7 @@
         display: block;
       }
       .txt_05:before {
-        content: "-";
+        content: '-';
         display: block;
         position: absolute;
         top: -1px;
@@ -194,7 +194,7 @@
         display: block;
       }
       .txt_06:before {
-        content: "·";
+        content: '·';
         display: block;
         position: absolute;
         top: -1px;
@@ -206,7 +206,7 @@
         font-size: 12px;
       }
       .txt_07:before {
-        content: "※ 제외 업종 : ";
+        content: '※ 제외 업종 : ';
         display: block;
         position: absolute;
         top: 0px;
@@ -250,7 +250,7 @@
 
   <body>
     <div class="spobiz_css">
-      <img src="../src/sub/KSPO_161_0.스포츠동향 (1).png" alt="1번" />
+      <img src="../src/sub/KSPO_161_0. (1).png" alt="1번" />
       <br /><br />
 
       <span class="txt_jew"
@@ -263,7 +263,7 @@
       <br /><br /><br />
       <!-- 기업들 등장 -->
       <h2>8위 KLUTCH SPORTS GROUP</h2>
-      <img src="../src/sub/KSPO_161_0.스포츠동향 (2).png" alt="2번" />
+      <img src="../src/sub/KSPO_161_0. (2).png" alt="2번" />
       <br /><br />
       <span class="txt_jew">위치: 미국 로스엔젤레스 </span><br />
       <span class="txt_jew">주요스포츠: 농구, 미식축구</span><br />
@@ -280,7 +280,7 @@
       <!-- 7위 -->
       <br /><br /><br />
       <h2>7위 ROC NATION SPORTS</h2>
-      <img src="../src/sub/KSPO_161_0.스포츠동향 (3).png" alt="2번" />
+      <img src="../src/sub/KSPO_161_0. (3).png" alt="2번" />
       <br /><br />
       <span class="txt_jew">위치: 미국 뉴욕 </span><br />
       <span class="txt_jew"
@@ -300,7 +300,7 @@
       <br /><br /><br />
       <!-- 6위 -->
       <h2>6위 BORAS CORPORATION</h2>
-      <img src="../src/sub/KSPO_161_0.스포츠동향 (4).png" alt="2번" />
+      <img src="../src/sub/KSPO_161_0. (4).png" alt="2번" />
       <br /><br />
       <span class="txt_jew">위치: 미국 캘리포니아 </span><br />
       <span class="txt_jew">주요스포츠: 야구</span><br />
@@ -317,7 +317,7 @@
       <br /><br /><br />
       <!-- 5위 -->
       <h2>5위 OCTAGON</h2>
-      <img src="../src/sub/KSPO_161_0.스포츠동향 (5).jpg" alt="2번" />
+      <img src="../src/sub/KSPO_161_0. (5).jpg" alt="2번" />
       <br /><br />
       <span class="txt_jew">위치: 미국 버지니아 </span><br />
       <span class="txt_jew"
@@ -336,7 +336,7 @@
       >
       <br /><br /><br />
       <h2>4위 EXCEL SPORTS MANAGEMENT</h2>
-      <img src="../src/sub/KSPO_161_0.스포츠동향 (6).png" alt="2번" />
+      <img src="../src/sub/KSPO_161_0. (6).png" alt="2번" />
       <br /><br />
       <span class="txt_jew">위치: 미국 뉴욕 </span><br />
       <span class="txt_jew">주요스포츠: 농구 골프 야구</span><br />
@@ -353,7 +353,7 @@
       >
       <br /><br /><br />
       <h2>3위 WME Sports</h2>
-      <img src="../src/sub/KSPO_161_0.스포츠동향 (7).png" alt="2번" />
+      <img src="../src/sub/KSPO_161_0. (7).png" alt="2번" />
       <br /><br />
       <span class="txt_jew">위치: 미국 캘리포니아 비버리 힐스 </span><br />
       <span class="txt_jew">주요 스포츠: 미식축구,농구,테니스,골프</span><br />
@@ -370,7 +370,7 @@
       >
       <br /><br /><br />
       <h2>2위 Wasserman</h2>
-      <img src="../src/sub/KSPO_161_0.스포츠동향 (8).jpg" alt="2번" />
+      <img src="../src/sub/KSPO_161_0. (8).jpg" alt="2번" />
       <br /><br />
       <span class="txt_jew">위치: 미국 로스엔젤레스 </span><br />
       <span class="txt_jew"
@@ -389,7 +389,7 @@
       >
       <br /><br /><br />
       <h2>1위 CAA(Creative Artists Agency)</h2>
-      <img src="../src/sub/KSPO_161_0.스포츠동향 (9).png" alt="2번" />
+      <img src="../src/sub/KSPO_161_0. (9).png" alt="2번" />
       <br /><br />
       <span class="txt_jew">위치: 미국 로스엔젤레스 </span><br />
       <span class="txt_jew">주요 스포츠: 축구, 농구, 하키, 야구, 미식축구</span
@@ -423,7 +423,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_1.스포츠동향 (1).png"
+            src="../src/sub/KSPO_161_1. (1).png"
             alt="1번"
             style="display: block"
             width="750"
@@ -433,7 +433,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_1.스포츠동향 (2).png"
+            src="../src/sub/KSPO_161_1. (2).png"
             alt="2번"
             style="display: block"
             width="750"
@@ -443,7 +443,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_1.스포츠동향 (3).png"
+            src="../src/sub/KSPO_161_1. (3).png"
             alt="3번"
             style="display: block"
             width="750"
@@ -453,7 +453,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_1.스포츠동향 (4).png"
+            src="../src/sub/KSPO_161_1. (4).png"
             alt="4번"
             style="display: block"
             width="750"
@@ -463,7 +463,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_1.스포츠동향 (5).png"
+            src="../src/sub/KSPO_161_1. (5).png"
             alt="5번"
             style="display: block"
             width="750"
@@ -473,7 +473,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_1.스포츠동향 (6).png"
+            src="../src/sub/KSPO_161_1. (6).png"
             alt="6번"
             style="display: block"
             width="750"
@@ -483,7 +483,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_1.스포츠동향 (7).png"
+            src="../src/sub/KSPO_161_1. (7).png"
             alt="7번"
             style="display: block"
             width="750"
@@ -493,7 +493,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_1.스포츠동향 (8).png"
+            src="../src/sub/KSPO_161_1. (8).png"
             alt="8번"
             style="display: block"
             width="750"
@@ -503,7 +503,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_1.스포츠동향 (9).png"
+            src="../src/sub/KSPO_161_1. (9).png"
             alt="9번"
             style="display: block"
             width="750"
@@ -513,7 +513,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_1.스포츠동향 (10).png"
+            src="../src/sub/KSPO_161_1. (10).png"
             alt="10번"
             style="display: block"
             width="750"
