--- a/public/230526/card/06.html
+++ b/public/230526/card/06.html
@@ -17,7 +17,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO_161_6.콘퍼런스&박람회 (1).png"
+            src="../src/sub/KSPO_161_6. (1).png"
             alt="1번"
             style="display: block"
             width="750"
@@ -28,7 +28,7 @@
         <td>
           <a href="https://www.taispo.com.tw" target="_blank">
             <img
-              src="../src/sub/KSPO_161_6.콘퍼런스&박람회 (2).png"
+              src="../src/sub/KSPO_161_6. (2).png"
               alt="2번"
               style="display: block"
               width="750"
@@ -40,7 +40,7 @@
         <td>
           <a href="https://www.ispo.com/outdoor" target="_blank">
             <img
-              src="../src/sub/KSPO_161_6.콘퍼런스&박람회 (3).png"
+              src="../src/sub/KSPO_161_6. (3).png"
               alt="3번"
               style="display: block"
               width="750"
@@ -52,7 +52,7 @@
         <td>
           <a href="http://www.fishing-korea.com/" target="_blank">
             <img
-              src="../src/sub/KSPO_161_6.콘퍼런스&박람회 (4).png"
+              src="../src/sub/KSPO_161_6. (4).png"
               alt="4번"
               style="display: block"
               width="750"
@@ -64,7 +64,7 @@
         <td>
           <a href="http://www.petshow.co.kr" target="_blank">
             <img
-              src="../src/sub/KSPO_161_6.콘퍼런스&박람회 (5).png"
+              src="../src/sub/KSPO_161_6. (5).png"
               alt="5번"
               style="display: block"
               width="750"
@@ -76,7 +76,7 @@
         <td>
           <a href="https://www.eurobike.com" target="_blank">
             <img
-              src="../src/sub/KSPO_161_6.콘퍼런스&박람회 (6).png"
+              src="../src/sub/KSPO_161_6. (6).png"
               alt="6번"
               style="display: block"
               width="750"
@@ -88,7 +88,7 @@
         <td>
           <a href="http://www.caf.co.kr" target="_blank">
             <img
-              src="../src/sub/KSPO_161_6.콘퍼런스&박람회 (7).png"
+              src="../src/sub/KSPO_161_6. (7).png"
               alt="7번"
               style="display: block"
               width="750"
@@ -100,7 +100,7 @@
         <td>
           <a href="https://kbee.kotra.biz/" target="_blank">
             <img
-              src="../src/sub/KSPO_161_6.콘퍼런스&박람회 (8).png"
+              src="../src/sub/KSPO_161_6. (8).png"
               alt="8번"
               style="display: block"
               width="750"
@@ -112,7 +112,7 @@
         <td>
           <a href="http://www.k-golfexpo.com/main" target="_blank">
             <img
-              src="../src/sub/KSPO_161_6.콘퍼런스&박람회 (9).png"
+              src="../src/sub/KSPO_161_6. (9).png"
               alt="9번"
               style="display: block"
               width="750"
