--- a/public/162_kspo/card/01.html
+++ b/public/162_kspo/card/01.html
@@ -10,7 +10,7 @@
         paliing: 0;
         display: block;
         max-width: 750px;
-        font-family: "맑은고딕", sans-serif;
+        font-family: '맑은고딕', sans-serif;
         letter-spacing: -1px;
         word-break: keep-all;
         text-align: left;
@@ -86,7 +86,7 @@
         line-height: 25px;
       }
       .spobiz_css ul li dl dd:before {
-        content: "";
+        content: '';
         position: absolute;
         top: 10px;
         left: -7px;
@@ -99,7 +99,7 @@
       }
 
       .spo_txt dd:before {
-        content: "";
+        content: '';
         position: absolute;
         top: 10px;
         left: -7px;
@@ -126,7 +126,7 @@
         padding-left: 10px;
       }
       .h_txt:before {
-        content: "○";
+        content: '○';
         display: block;
         position: absolute;
         top: -1px;
@@ -144,7 +144,7 @@
         display: block;
       }
       .txt_01:before {
-        content: "-";
+        content: '-';
         display: block;
         position: absolute;
         top: -1px;
@@ -156,7 +156,7 @@
         margin-left: 10px;
       }
       .txt_02:before {
-        content: "※";
+        content: '※';
         display: block;
         position: absolute;
         top: -1px;
@@ -167,7 +167,7 @@
         display: block;
       }
       .txt_03:before {
-        content: "▶";
+        content: '▶';
         display: block;
         position: absolute;
         top: -1px;
@@ -183,7 +183,7 @@
         display: block;
       }
       .txt_05:before {
-        content: "-";
+        content: '-';
         display: block;
         position: absolute;
         top: -1px;
@@ -194,7 +194,7 @@
         display: block;
       }
       .txt_06:before {
-        content: "·";
+        content: '·';
         display: block;
         position: absolute;
         top: -1px;
@@ -206,7 +206,7 @@
         font-size: 12px;
       }
       .txt_07:before {
-        content: "※ 제외 업종 : ";
+        content: '※ 제외 업종 : ';
         display: block;
         position: absolute;
         top: 0px;
@@ -281,7 +281,7 @@
       <br /><br /><br />
       <h2>NBA</h2>
       <img src="../src/sub/KSPO_162_0 (3).png" alt="2번" />
-      <br /><br />
+
       <span class="txt_jew"
         >NBA는 미국뿐만 아니라 전 세계적인 사회적 문제에 관심을 갖고 글로벌
         사회적 프로그램인 NBA Cares를 출시했다. 프로그램 참가자들에게는
