--- a/public/162_keris/index.html
+++ b/public/162_keris/index.html
@@ -70,7 +70,7 @@
             <area
               shape="rect"
               coords="472,2858,678,3110"
-              href="http://www.aseanoer.net/notice/doNoticeSelect.acu?noticeSeqno=10630"
+              href="http://www.aseanoer.net/search/oerView.acu?contentsSeqno=10630"
               target="_blank"
             />
 
