--- a/public/163_kspo/upload/mail.html
+++ b/public/163_kspo/upload/mail.html
@@ -17,13 +17,13 @@
       <tr>
         <td>
           <img
-            src="src/main/KSPO163_0 (2).png"
+            src="https://godjewel.co.kr/163_kspo/src/main/KSPO163_0 (2).png"
             alt="뉴스레터 상단"
             style="display: block"
             width="730"
           />
           <img
-            src="src/main/KSPO163_0 (3).png"
+            src="https://godjewel.co.kr/163_kspo/src/main/KSPO163_0 (3).png"
             usemap="#map"
             alt="뉴스레터 하단"
             style="display: block"
