--- a/public/164_kspo/main.html
+++ b/public/164_kspo/main.html
@@ -102,6 +102,14 @@
               href="https://zrr.kr/K8fu"
               target="_blank"
             />
+            <area
+              shape="rect"
+              alt=""
+              title=""
+              coords="2,3180,698,3444"
+              href="https://zrr.kr/K8fu"
+              target="_blank"
+            />
           </map>
         </td>
       </tr>
