--- a/public/164_kspo/main.html
+++ b/public/164_kspo/main.html
@@ -17,13 +17,13 @@
       <tr>
         <td>
           <img
-            src="src/main/KSPO164_0 (2).png"
+            src="https://godjewel.co.kr/164_kspo/src/main/KSPO164_0 (2).png"
             alt="뉴스레터 상단"
             style="display: block"
             width="730"
           />
           <img
-            src="src/main/KSPO164_0 (3).png"
+            src="https://godjewel.co.kr/164_kspo/src/main/KSPO164_0 (3).png"
             usemap="#map"
             alt="뉴스레터 하단"
             style="display: block"
@@ -35,7 +35,7 @@
               alt=""
               title=""
               coords="281,388,447,435"
-              href="card/01.html"
+              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4524"
               target="_blank"
             />
             <area
@@ -43,7 +43,7 @@
               alt=""
               title=""
               coords="400,854,471,886"
-              href="card/02.html"
+              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4525"
               target="_blank"
             />
             <area
@@ -51,7 +51,7 @@
               alt="*"
               title="선도기업 성과사례"
               coords="63,1221,129,1242"
-              href="card/03.html"
+              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4526"
               target="_blank"
             />
             <area
@@ -59,7 +59,7 @@
               alt="*"
               title="이슈페이퍼"
               coords="61,1606,133,1640"
-              href="card/04.html"
+              href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=993&pageNo=1&boardCode=IS&noticeSeq=4501&keyKind=ALL&keyWord="
               target="_blank"
             />
             <area
@@ -67,7 +67,7 @@
               alt="*"
               title="SI포커스"
               coords="393,2086,467,2119"
-              href="card/05.html"
+              href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=991&pageNo=1&keyKind=&boardCode=SI&noticeSeq=4502&keyWord="
               target="_blank"
             />
             <area
@@ -75,7 +75,7 @@
               alt="*"
               title=""
               coords="51,2580,120,2614"
-              href="card/06.html"
+              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4527"
               target="_blank"
             />
             <area
@@ -99,7 +99,7 @@
               alt=""
               title=""
               coords="25,3100,189,3142"
-              href="https://zrr.kr/K8fu"
+              href="https://zrr.kr/T69z"
               target="_blank"
             />
             <area
@@ -107,7 +107,7 @@
               alt=""
               title=""
               coords="2,3180,698,3444"
-              href="https://zrr.kr/K8fu"
+              href="https://zrr.kr/x5C5"
               target="_blank"
             />
           </map>
