--- a/public/163_keris/index.html
+++ b/public/163_keris/index.html
@@ -28,6 +28,7 @@
               shape="rect"
               coords="57,477,175,599"
               href="https://godjewel.co.kr/163_keris/document.pdf"
+              target="_blank"
               download="23_keris.pdf"
               alt="download"
             />
