--- a/public/165_kspo/main_upload.html
+++ b/public/165_kspo/main_upload.html
@@ -17,13 +17,13 @@
       <tr>
         <td>
           <img
-            src="https://godjewel.co.kr/165_kspo/src/main/KSPO165_0 (2).png"
+            src="https://www.godjewel.co.kr/165_kspo/src/main/KSPO165_0%20(2).png"
             alt="뉴스레터 상단"
             style="display: block"
             width="730"
           />
           <img
-            src="https://godjewel.co.kr/165_kspo/src/main/KSPO165_0 (3).png"
+            src="https://www.godjewel.co.kr/165_kspo/src/main/KSPO165_0%20(3).png"
             usemap="#map"
             alt="뉴스레터 하단"
             style="display: block"
@@ -34,48 +34,48 @@
               shape="rect"
               alt=""
               title=""
-              coords="281,388,447,435"
-              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4524"
+              coords="282,366,447,417"
+              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4537"
               target="_blank"
             />
             <area
               shape="rect"
               alt=""
               title=""
-              coords="400,854,471,886"
-              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4525"
+              coords="57,794,138,831"
+              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4538"
               target="_blank"
             />
             <area
               shape="rect"
               alt="*"
               title="선도기업 성과사례"
-              coords="63,1221,129,1242"
-              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4526"
+              coords="409,1209,483,1247"
+              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4539"
               target="_blank"
             />
             <area
               shape="rect"
               alt="*"
               title="이슈페이퍼"
-              coords="61,1606,133,1640"
-              href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=993&pageNo=1&boardCode=IS&noticeSeq=4501&keyKind=ALL&keyWord="
+              coords="51,1666,138,1703"
+              href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=993&pageNo=1&boardCode=IS&noticeSeq=4511&keyKind=ALL&keyWord="
               target="_blank"
             />
             <area
               shape="rect"
               alt="*"
               title="SI포커스"
-              coords="393,2086,467,2119"
-              href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=991&pageNo=1&keyKind=&boardCode=SI&noticeSeq=4502&keyWord="
+              coords="403,2081,485,2118"
+              href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=991&pageNo=1&keyKind=&boardCode=SI&noticeSeq=4512&keyWord="
               target="_blank"
             />
             <area
               shape="rect"
               alt="*"
               title=""
-              coords="51,2580,120,2614"
-              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4527"
+              coords="55,2588,140,2631"
+              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4540"
               target="_blank"
             />
             <area
@@ -99,15 +99,7 @@
               alt=""
               title=""
               coords="25,3100,189,3142"
-              href="https://zrr.kr/T69z"
-              target="_blank"
-            />
-            <area
-              shape="rect"
-              alt=""
-              title=""
-              coords="2,3180,698,3444"
-              href="https://zrr.kr/x5C5"
+              href="https://zrr.kr/03Te"
               target="_blank"
             />
           </map>
