kspo upload용 작업

--- a/public/166_kspo/upload/05.html
+++ b/public/166_kspo/upload/05.html
@@ -2,7 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>KSPO166_3.2022 지원사업 창업보육 지원기업 우수기업 소개</title>
+    <title>
+      KSPO165_5.SI포커스 데이터로 알아보는 스포츠산업: 단계적 일상회복과
+      스포츠소비
+    </title>
   </head>
 
   <body>
@@ -17,7 +20,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO166_3 (1).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231026/sub/KSPO166_5 (1).png"
             alt="1번"
             style="display: block"
             width="750"
@@ -27,7 +30,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO166_3 (2).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231026/sub/KSPO166_5 (2).png"
             alt="2번"
             style="display: block"
             width="750"
@@ -37,7 +40,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO166_3 (3).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231026/sub/KSPO166_5 (3).png"
             alt="3번"
             style="display: block"
             width="750"
@@ -47,7 +50,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO166_3 (4).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231026/sub/KSPO166_5 (4).png"
             alt="4번"
             style="display: block"
             width="750"
@@ -57,7 +60,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO166_3 (5).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231026/sub/KSPO166_5 (5).png"
             alt="5번"
             style="display: block"
             width="750"
@@ -67,7 +70,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO166_3 (6).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231026/sub/KSPO166_5 (6).png"
             alt="6번"
             style="display: block"
             width="750"
@@ -77,7 +80,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO166_3 (7).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231026/sub/KSPO166_5 (7).png"
             alt="7번"
             style="display: block"
             width="750"
@@ -87,7 +90,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO166_3 (8).png"
+            src="https://spobiz.kspo.or.kr/images/newsletter/20231026/sub/KSPO166_5 (8).png"
             alt="8번"
             style="display: block"
             width="750"
