--- a/public/166_kspo/upload/07.html
+++ b/public/166_kspo/upload/07.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>KSPO166_3.2022 지원사업 창업보육 지원기업 우수기업 소개</title>
+    <title>KSPO166_7.스낵스포츠</title>
   </head>
 
   <body>
@@ -17,7 +17,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO166_3 (1).png"
+            src="../src/sub/KSPO166_7 (1).png"
             alt="1번"
             style="display: block"
             width="750"
@@ -27,7 +27,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO166_3 (2).png"
+            src="../src/sub/KSPO166_7 (2).png"
             alt="2번"
             style="display: block"
             width="750"
@@ -37,7 +37,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO166_3 (3).png"
+            src="../src/sub/KSPO166_7 (3).png"
             alt="3번"
             style="display: block"
             width="750"
@@ -47,7 +47,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO166_3 (4).png"
+            src="../src/sub/KSPO166_7 (4).png"
             alt="4번"
             style="display: block"
             width="750"
@@ -57,7 +57,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO166_3 (5).png"
+            src="../src/sub/KSPO166_7 (5).png"
             alt="5번"
             style="display: block"
             width="750"
@@ -67,7 +67,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO166_3 (6).png"
+            src="../src/sub/KSPO166_7 (6).png"
             alt="6번"
             style="display: block"
             width="750"
@@ -77,7 +77,7 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO166_3 (7).png"
+            src="../src/sub/KSPO166_7 (7).png"
             alt="7번"
             style="display: block"
             width="750"
@@ -87,8 +87,18 @@
       <tr>
         <td>
           <img
-            src="../src/sub/KSPO166_3 (8).png"
+            src="../src/sub/KSPO166_7 (8).png"
             alt="8번"
+            style="display: block"
+            width="750"
+          />
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <img
+            src="../src/sub/KSPO166_7 (9).png"
+            alt="9번"
             style="display: block"
             width="750"
           />
