--- a/public/166_kspo/main_upload.html
+++ b/public/166_kspo/main_upload.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>KSPO 165 뉴스레터</title>
+    <title>KSPO 166 뉴스레터</title>
   </head>
 
   <body>
@@ -17,13 +17,13 @@
       <tr>
         <td>
           <img
-            src="https://www.godjewel.co.kr/165_kspo/src/main/KSPO165_0%20(2).png"
+            src="https://www.godjewel.co.kr/166_kspo/src/main/KSPO166_0 (2).png"
             alt="뉴스레터 상단"
             style="display: block"
             width="730"
           />
           <img
-            src="https://www.godjewel.co.kr/165_kspo/src/main/KSPO165_0%20(3).png"
+            src="https://www.godjewel.co.kr/166_kspo/src/main/KSPO166_0 (3).png"
             usemap="#map"
             alt="뉴스레터 하단"
             style="display: block"
@@ -34,55 +34,55 @@
               shape="rect"
               alt=""
               title=""
-              coords="282,366,447,417"
-              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4537"
+              coords="281,378,451,418"
+              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4548"
               target="_blank"
             />
             <area
               shape="rect"
               alt=""
               title=""
-              coords="57,794,138,831"
-              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4538"
+              coords="47,828,124,860"
+              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4549"
               target="_blank"
             />
             <area
               shape="rect"
               alt="*"
               title="선도기업 성과사례"
-              coords="409,1209,483,1247"
-              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4539"
+              coords="371,1271,460,1308"
+              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4550"
               target="_blank"
             />
             <area
               shape="rect"
               alt="*"
               title="이슈페이퍼"
-              coords="51,1666,138,1703"
-              href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=993&pageNo=1&boardCode=IS&noticeSeq=4511&keyKind=ALL&keyWord="
+              coords="42,1662,128,1703"
+              href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=993&pageNo=1&boardCode=IS&noticeSeq=4530&keyKind=ALL&keyWord="
               target="_blank"
             />
             <area
               shape="rect"
               alt="*"
               title="SI포커스"
-              coords="403,2081,485,2118"
-              href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=991&pageNo=1&keyKind=&boardCode=SI&noticeSeq=4512&keyWord="
+              coords="399,2175,482,2218"
+              href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=991&pageNo=1&keyKind=&boardCode=SI&noticeSeq=4529&keyWord="
               target="_blank"
             />
             <area
               shape="rect"
               alt="*"
               title=""
-              coords="55,2588,140,2631"
-              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4540"
+              coords="54,2568,139,2604"
+              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4551"
               target="_blank"
             />
             <area
               shape="rect"
               alt=""
               title="한국스포츠정책과학원"
-              coords="498,2777,569,2847"
+              coords="496,2778,573,2855"
               href="https://spobiz.kspo.or.kr/front/index.do"
               target="_blank"
             />
@@ -90,7 +90,7 @@
               shape="rect"
               alt=""
               title="인스타그램"
-              coords="582,2775,648,2847"
+              coords="579,2777,648,2852"
               href="https://www.instagram.com/kspo_newsletter/"
               target="_blank"
             />
@@ -98,8 +98,8 @@
               shape="rect"
               alt=""
               title=""
-              coords="25,3100,189,3142"
-              href="https://zrr.kr/03Te"
+              coords="19,3086,205,3159"
+              href="https://zrr.kr/T897"
               target="_blank"
             />
           </map>
