kspo 167 upload 버전

--- a/public/167_kspo/main_upload.html
+++ b/public/167_kspo/main_upload.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>KSPO 166 뉴스레터</title>
+    <title>KSPO 167 뉴스레터</title>
   </head>
 
   <body>
@@ -17,13 +17,13 @@
       <tr>
         <td>
           <img
-            src="https://www.godjewel.co.kr/166_kspo/src/main/KSPO166_0 (2).png"
+            src="https://godjewel.co.kr/167_kspo/src/main/KSPO_167_0 (2).png"
             alt="뉴스레터 상단"
             style="display: block"
             width="730"
           />
           <img
-            src="https://www.godjewel.co.kr/166_kspo/src/main/KSPO166_0 (3).png"
+            src="https://godjewel.co.kr/167_kspo/src/main/KSPO_167_0 (3).png"
             usemap="#map"
             alt="뉴스레터 하단"
             style="display: block"
@@ -34,55 +34,55 @@
               shape="rect"
               alt=""
               title=""
-              coords="281,378,451,418"
-              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4548"
+              coords="281,365,452,411"
+              href="card/01.html"
               target="_blank"
             />
             <area
               shape="rect"
               alt=""
               title=""
-              coords="47,828,124,860"
-              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4549"
+              coords="383,811,458,846"
+              href="card/02.html"
               target="_blank"
             />
             <area
               shape="rect"
               alt="*"
               title="선도기업 성과사례"
-              coords="371,1271,460,1308"
-              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4550"
+              coords="44,1271,116,1301"
+              href="card/03.html"
               target="_blank"
             />
             <area
               shape="rect"
               alt="*"
               title="이슈페이퍼"
-              coords="42,1662,128,1703"
-              href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=993&pageNo=1&boardCode=IS&noticeSeq=4530&keyKind=ALL&keyWord="
+              coords="434,1699,512,1730"
+              href="card/04.html"
               target="_blank"
             />
             <area
               shape="rect"
               alt="*"
               title="SI포커스"
-              coords="399,2175,482,2218"
-              href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=991&pageNo=1&keyKind=&boardCode=SI&noticeSeq=4529&keyWord="
+              coords="43,2149,122,2183"
+              href="card/05.html"
               target="_blank"
             />
             <area
               shape="rect"
               alt="*"
               title=""
-              coords="54,2568,139,2604"
-              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4551"
+              coords="419,2580,487,2614"
+              href="card/06.html"
               target="_blank"
             />
             <area
               shape="rect"
               alt=""
               title="한국스포츠정책과학원"
-              coords="496,2778,573,2855"
+              coords="501,2777,567,2847"
               href="https://spobiz.kspo.or.kr/front/index.do"
               target="_blank"
             />
@@ -90,7 +90,7 @@
               shape="rect"
               alt=""
               title="인스타그램"
-              coords="579,2777,648,2852"
+              coords="578,2776,649,2848"
               href="https://www.instagram.com/kspo_newsletter/"
               target="_blank"
             />
@@ -98,8 +98,16 @@
               shape="rect"
               alt=""
               title=""
-              coords="19,3086,205,3159"
-              href="https://zrr.kr/T897"
+              coords="533,3107,707,3164"
+              href="https://www.instagram.com/p/Cz9tzDVPmvw/"
+              target="_blank"
+            />
+            <area
+              shape="rect"
+              alt=""
+              title=""
+              coords="1,3182,727,3435"
+              href="https://www.instagram.com/p/Cz8UscepxuM/"
               target="_blank"
             />
           </map>
