--- a/public/167_kspo/main_upload.html
+++ b/public/167_kspo/main_upload.html
@@ -35,7 +35,7 @@
               alt=""
               title=""
               coords="281,365,452,411"
-              href="card/01.html"
+              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4568"
               target="_blank"
             />
             <area
@@ -43,7 +43,7 @@
               alt=""
               title=""
               coords="383,811,458,846"
-              href="card/02.html"
+              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4569"
               target="_blank"
             />
             <area
@@ -51,7 +51,7 @@
               alt="*"
               title="선도기업 성과사례"
               coords="44,1271,116,1301"
-              href="card/03.html"
+              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4570"
               target="_blank"
             />
             <area
@@ -59,7 +59,7 @@
               alt="*"
               title="이슈페이퍼"
               coords="434,1699,512,1730"
-              href="card/04.html"
+              href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=993&pageNo=1&boardCode=IS&noticeSeq=4542&keyKind=ALL&keyWord="
               target="_blank"
             />
             <area
@@ -67,7 +67,7 @@
               alt="*"
               title="SI포커스"
               coords="43,2149,122,2183"
-              href="card/05.html"
+              href="https://www.sports.re.kr/front/spobiz/spobizContents_view.do?menu_seq=991&pageNo=1&keyKind=&boardCode=SI&noticeSeq=4543&keyWord="
               target="_blank"
             />
             <area
@@ -75,7 +75,7 @@
               alt="*"
               title=""
               coords="419,2580,487,2614"
-              href="card/06.html"
+              href="https://spobiz.kspo.or.kr/front/www/trend/view.do?board_id=30002&topMenuSeq=3&notice_seq=4571"
               target="_blank"
             />
             <area
